fix schedule